<resources>
    <string name="app_name">CMM</string>
    <string name="text_status_started">Aparelho sem número</string>
    <string name="text_status_send">Existe dados para serem enviado</string>
    <string name="text_status_sending">Dados estão sendo enviados</string>
    <string name="text_status_sent">Não existe dados para serens enviados</string>
    <string name="text_title_password">SENHA</string>
    <string name="text_pattern_ok">OK</string>
    <string name="text_pattern_save_update">SALVAR/ATUALIZAR DADOS</string>
    <string name="text_pattern_save">SALVAR</string>
    <string name="text_pattern_cancel">CANCELAR</string>
    <string name="text_password_invalid">SENHA INVÁLIDA!</string>
    <string name="text_failure">FALHA INESPERADA NO APLICATIVO! POR FAVOR ENTRE EM CONTATO COM TI. %1$s</string>
    <string name="text_blocked_access_app">ACESSO NEGADO! POR FAVOR, CONFIGURE O APLICATIVO ANTES DO USO DO MESMO!</string>
    <string name="text_title_nro_aparelho">NRO APARELHO</string>
    <string name="text_title_nro_equip">NRO EQUIPAMENTO</string>
    <string name="text_field_empty_config">CAMPO VAZIO! POR FAVOR, PREENCHA TODOS OS CAMPOS PARA SALVAR AS CONFIGURAÇÕES E ATUALIZAR TODAS AS BASES DE DADOS.</string>
    <string name="text_recover_token">FALHA DE RECUPERACAO DE TOKEN! POR FAVOR ENTRE EM CONTATO COM TI. %1$s</string>
    <string name="text_update_failure">FALHA DE ATUALIZAÇÃO DE DADOS! POR FAVOR ENTRE EM CONTATO COM TI. %1$s</string>
    <string name="text_config_success">CONFIGURAÇÃO REALIZADA COM SUCESSO!</string>
    <string name="text_title_operator">MATRICULA OPERADOR</string>
    <string name="text_number_1">1</string>
    <string name="text_number_2">2</string>
    <string name="text_number_3">3</string>
    <string name="text_number_4">4</string>
    <string name="text_number_5">5</string>
    <string name="text_number_6">6</string>
    <string name="text_number_7">7</string>
    <string name="text_number_8">8</string>
    <string name="text_number_9">9</string>
    <string name="text_number_0">0</string>
    <string name="text_number_00">00</string>
    <string name="text_comma">,</string>
    <string name="text_pattern_clean">APAGAR</string>
    <string name="text_pattern_update">ATUALIZAR DADOS</string>
    <string name="text_field_empty">CAMPO VAZIO! POR FAVOR, PREENCHA O CAMPO \"%1$s\" PARA DAR CONTINUIDADE AO APONTAMENTO.</string>
    <string name="text_input_data_invalid">DADO INVÁLIDO! POR FAVOR, VERIFIQUE SE O CAMPO \"%1$s\" FOI DIGITADO CORRETAMENTE OU ATUALIZE OS DADOS PARA VERIFICAR SE OS MESMOS NÃO ESTÃO DESATUALIZADOS.</string>
    <string name="text_input_data_non_existent">\"%1$s\" INEXISTENTE! POR FAVOR, VERIFIQUE SE O CAMPO FOI DIGITADO CORRETAMENTE.</string>
    <string name="text_title_equip">EQUIPAMENTO</string>
    <string name="text_title_turn">TURNO</string>
    <string name="text_pattern_return">RETORNAR</string>
    <string name="text_title_os">ORDEM DE SERVIÇO</string>
    <string name="text_title_activity">ATIVIDADE</string>
    <string name="text_title_hour_meter">HORÍMETRO</string>
    <string name="text_input_hour_meter_invalid">O HODÔMETRO REGISTRADO %1$s É MENOR QUE O ANTERIOR DE %2$s. DESEJA MANTÊ-LO?</string>
    <string name="text_title_menu">MENU</string>
    <string name="text_title_descr_equip">%1$s</string>
    <string name="text_pattern_finish_header">FINALIZAR BOLETIM</string>
    <string name="text_selection_option_invalid">OPÇÃO SELECIONADO INVÁLIDA! POR FAVOR, ENTRE EM CONTATO COM TI.</string>
    <string name="text_title_stop">PARADA</string>
    <string name="text_placeholder_field">Pesquisa</string>
    <string name="text_header_empty">POR FAVOR! INSIRA OS APONTAMENTOS EM TODOS O(S) BOLETIM(INS)!</string>
    <string name="text_msg_recovery">Recuperando dados da tabela \"%1$s\" do Web Service.</string>
    <string name="text_msg_clean">Limpando a tabela \"%1$s\".</string>
    <string name="text_msg_save">Salvando dados na tabela \"%1$s\".</string>
    <string name="text_msg_get_token">Enviando dados de Token</string>
    <string name="text_msg_save_token">Salvando dados de Token</string>
    <string name="text_msg_finish_update_initial">Ajuste iniciais finalizado com sucesso!</string>
    <string name="text_msg_finish_update_completed">Atualização de dados realizado com sucesso!</string>
    <string name="text_title_check_list">CHECKLIST</string>
    <string name="text_msg_check_update_check_list">CHECANDO SE HÁ ATUALIZAÇÕES PARA QUESTÕES DE CHECKLIST.</string>
    <string name="text_msg_update_check_list">ATENÇÃO! HÁ NOVAS ATUALIZAÇÕES PARA QUESTÕES DE CHECKLIST. DESEJA ATUALIZÁ-LAS?</string>
    <string name="text_pattern_no">NÃO</string>
    <string name="text_pattern_yes">SIM</string>
    <string name="text_button_according">CONFORME (OK)</string>
    <string name="text_button_analyze">NÃO CONFORME (ANALISAR)</string>
    <string name="text_button_repair">NÃO CONFORME (REPARO)</string>
    <string name="text_title_initial_menu">MENU INICIAL - V %1$s</string>
    <string name="text_item_note">APONTAMENTO</string>
    <string name="text_item_config">CONFIGURAÇÃO</string>
    <string name="text_item_out">SAIR</string>
    <string name="text_title_history">HISTÓRICO</string>
    <string name="text_msg_no_data_history">NÃO CONTÉM APONTAMENTO NO BOLETIM.</string>">
    <string name="text_item_work">ATIVIDADE: %1$s</string>
    <string name="text_item_stop">PARADA: %1$s</string>
    <string name="text_msg_note_mechanic_open">POR FAVOR, FINALIZE O APONTAMENTO DE MANUTENÇÃO PARA INICIAR OUTRO APONTAMENTO.</string>
    <string name="text_button_finish_header">FINALIZAR BOLETIM</string>
    <string name="text_button_return_list">RETORNAR PRA LISTA</string>
    <string name="text_msg_question_finish_mechanic">DESEJA REALMENTE FINALIZAR A MANUTENÇÃO?</string>
    <string name="text_msg_initial_activity">INÍCIO DE ATIVIDADE: %1$s</string>
    <string name="text_msg_pre_cec_started">O HORÁRIO DE SAÍDA DA USINA JÁ FOI INSERIDO ANTERIORMENTE. POR FAVOR TERMINE DE FAZER O APONTAMENTO OU REENVIE OS APONTAMENTOS JÁ PRONTOS.</string>
    <string name="text_msg_finish_mechanic">FOI REALIZADO COM SUCESSO A FINALIZAÇÃO DA MANUTENÇÃO MECANICA.</string>
    <string name="text_msg_question_return_mill">DESEJA REALMENTE RETORNAR AO TRABALHO?</string>
    <string name="text_msg_without_loading_input">POR FAVOR! REALIZE O PROCESSO DE CARREGAMENTO DE INSUMO PARA DEPOIS REALIZAR O DESCARREGAMENTO.</string>
    <string name="text_msg_without_loading_composing">POR FAVOR! REALIZE O PROCESSO DE CARREGAMENTO DE INSUMO PARA DEPOIS REALIZAR O DESCARREGAMENTO.</string>
    <string name="text_msg_need_uncoupling_trailer">POR FAVOR! DESENGATE CARRETA(S) PARA DEPOIS ENGATÁ-LAS.</string>
    <string name="text_msg_need_coupling_trailer">POR FAVOR! ENGATE CARRETA(S) PARA DEPOIS DESENGATÁ-LAS.</string>
    <string name="text_msg_uncoupling_trailer">FOI REALIZADO COM SUCESSO O DESENGATE AS CARRETAS.</string>
    <string name="text_msg_without_note_stop">POR FAVOR, REALIZE UMA PARADA PARA REALIZAR UM APONTAMENTO DE MANUTENÇÃO.</string>
    <string name="text_title_transhipment">TRANSBORDO</string>
    <string name="text_title_motor_pump">MOTOBOMBA</string>
    <string name="text_item_nro_os">NRO OS: %1$s</string>
    <string name="text_item_value_performance">REND.: %1$s</string>
    <string name="text_title_performance_list">RENDIMENTO(S)</string>
    <string name="text_msg_no_data_performance">NÃO CONTÉM RENDIMENTO ADICIONADO.</string>
    <string name="text_title_performance">RENDIMENTO</string>
    <string name="text_title_os_value">OS: %1$s</string>
    <string name="text_msg_value_invalid">VALOR INFORMADO MAIS ALTO DO QUE O PERMITIDO PRA OS. VALOR VERIFIQUE O VALOR DIGITADO.</string>
    <string name="text_msg_close_performance_invalid">POR FAVOR, ADICIONE O(S) VALOR(ES) DE RENDIMENTO DE CADA \"OS\" PARA FECHAR O BOLETIM.</string>
    <string name="text_title_nozzle">BOCAL</string>
    <string name="text_title_pressure">PRESSÃO</string>
    <string name="text_title_speed">VELOCIDADE</string>
    <string name="text_title_collection_list">RECOLHIMENTO(S)</string>
    <string name="text_msg_no_data_collection">NÃO CONTÉM RECOLHIMENTO ADICIONADO.</string>
    <string name="text_title_collection">RECOLHIMENTO</string>
    <string name="text_title_implement">IMPLEMENTO %1$s</string>
    <string name="text_msg_check_os">Checando se existe Itens de Manutenção da OS digitada na Base de Dados.</string>
    <string name="text_item_component">COMPONENTE: %1$s</string>
    <string name="text_item_service">SEQ.: %1$s</string>
    <string name="text_title_item_os_mechanic">ITEM(S) DA OS</string>
    <string name="text_title_sequence">NÚMERO DO ITEM</string>
    <string name="text_title_reel_list">CARRETEL(IS)</string>
    <string name="text_msg_no_data_list_reel">NÃO CONTÉM CARRETEL(IS) APONTADOS.</string>
    <string name="text_pattern_insert">INSERIR</string>
    <string name="text_title_reel">CARRETEL</string>
    <string name="text_msg_close_collection_invalid">POR FAVOR! ADICIONE VALORES DE RECOLHIMENTOS DE MANGUEIRAS EM TODAS O.S. PARA PODER ENCERRAR O BOLETIM!</string>
    <string name="text_title_initial_menu_certificate">CERTIFICADO</string>
    <string name="text_item_initial_pre_cec">APONTAR CERTIFICADO</string>
    <string name="text_item_historical_pre_cec">HISTÓRICO DE VIAGEM</string>
    <string name="text_item_historical_cec">HISTÓRICO DE CERTIFICADO</string>
    <string name="text_blocked_access_certificated">É NECESSÁRIO A INSERÇÃO DO HORARIO DE SAÍDA DA USINA E/OU DE CHEGADA AO CAMPO.</string>
    <string name="text_msg_check_os_moto_mec">VERIFICANDO OS NO WEB SERVICE</string>
    <string name="text_title_release">LIBERAÇÃO</string>
</resources>