...
@Preview(showBackground = true)
@Composable
fun MenuPagePreview() {
    CMMTheme {
        Scaffold(modifier = Modifier.fillMaxSize()) { innerPadding ->
            MenuContent(
                descrEquip = "2200 - TRATOR",
                itemMenuModelList = listOf(
                    ItemMenuModel(
                        id = 1,
                        title = "TRABALHANDO"
                    ),
                    ItemMenuModel(
...
