...
        Scaffold(modifier = Modifier.fillMaxSize()) { innerPadding ->
            ActivityListScreenContent(
                activityList = listOf(
                    Activity(
                        idActivity = 1,
                        codActivity = 1,
                        descrActivity = "ATIVIDADE 1"
                    )
                ),

                setIdActivity = {},
                updateDatabase = {},
                flagFailure = false,
...
